Repos fixed, exceptions added